menabahkan audio dan membuat folder audio

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
+    <!-- <audio autoplay loop src="audio/hbd.mp3"></audio> -->
+    <audio autoplay loop>
+      <!-- <source src="audio/hbd.ogg" type="audio/ogg" /> -->
+      <source src="audio/hbd.mp3" type="audio/mpeg" />
+    </audio>
     <div class="section">
       <div class="container">
         <div class="row">
