Mengubah icon button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Passions+Conflict&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster+Two&family=Passions+Conflict&family=Peralta&display=swap" rel="stylesheet" />
 
+    <!-- My Alert -->
+    <script src="js/alert.js"></script>
+
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="ico/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="ico/apple-icon-60x60.png" />
