--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster+Two&family=Passions+Conflict&family=Peralta&display=swap" rel="stylesheet" />
 
     <!-- My Alert -->
-    <script src="js/alert.js"></script>
+    <!-- <script src="js/alert.js"></script> -->
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="ico/apple-icon-57x57.png" />
@@ -57,10 +57,10 @@
             <div class="image">
               <img class="balon" src="img/balon_kado.png" alt="balon1" />
               <img class="balon1" src="img/balon_kado.png" alt="balon1" />
-              <img src="img/kue.jpg" alt="Kue Ulang Tahun" class="img-fluid myImage" id="myImage" />
+              <img src="img/kue.jpg" alt="Kue Ulang Tahun" class="img-fluid" id="myImage" />
             </div>
             <br />
-            <button type="button" class="btn btn-success mb-4" onclick="show_hide()"><i class="bi bi-cursor-fill"></i> Tiup Lilin!</button>
+            <button type="button" class="btn btn-success mb-4" onclick="show_hide()">🎂 Tiup Lilin!</button>
             <p class="mt-3 pb-4">
               Ciee ada yang nambah umur nihh.. selamat yaa.. semoga panjang umur, sehat selalu, apa yang diinginkan tercapai, dan semoga kedepan nya pandai nabung yaa, engga boros lagi.. pokoknya yang terbaik lahh buat kamu. Maaf yaa gabisa
               ngasih apa-apa, cuma bisa ngasih ini <i class="bi bi-emoji-frown-fill"></i>
